# Hospital-Medical-Equipment-Management-System-Biomedical-CMMS-

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENCE.md  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/accounts/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
apps/ai/: admin.py  assistant.py  client.py  manuals.py  models.py  prompts.py  retrieval.py  services.py  tasks.py  urls.py  views.py
apps/core/: admin.py  audit.py  context_processors.py  exceptions.py  models.py
apps/equipment/: admin.py  forms.py  importer.py  models.py  services.py  urls.py  views.py
apps/maintenance/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/reports/: metrics.py  models.py  pdf.py  urls.py  views.py
config/: procrastinate.py  urls.py
docs/: FOLLOWUPS.md
scripts/: README.md
templates/: base.html  home.html
tests/: test_account_management.py  test_accounts.py  test_assistant.py  test_assistant_views.py  test_complaint_services.py  test_condemnation.py  test_confirmation.py  test_core.py  test_dashboard_view.py  test_equipment_models.py  test_equipment_views.py  test_importer.py  test_importer_views.py  test_llm_client.py  test_maintenance_models.py  test_maintenance_views.py  test_manual_models.py  test_manual_processing.py  test_manual_views.py  test_metrics.py  test_monthly_report.py  test_report_generation.py  test_report_views.py  test_retrieval.py  test_risk_models.py  test_risk_scoring.py  test_risk_views.py  test_seed_demo.py  test_smoke.py  test_status_machine.py  test_ui.py  test_workorder_services.py
(+52 files in other folders)
